--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>panda_moveit_config</name>
+  <name>panda_moveit_custom</name>
   <version>0.6.0</version>
   <description> A partly automatically generated package with all the configuration and launch files for using Panda research with MoveIt!</description>
   <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
   <license>Apache 2.0</license>
-
-  <url type="website">http://wiki.ros.org/panda_moveit_config</url>
-  <url type="repository">https://github.com/frankaemika/franka_ros</url>
-  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
-  <author>Franka Emika GmbH</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
